docs: record the referenced-key decode narrowing as an ADR
Covers the second decode-narrowing axis and the four contract decisions the work forced: a query gets
what it asked for, so a name only named reference content asked for has an empty unnamed view;
`enrichEntity` adds while `limitEntity` subtracts; enrichment carries the named requirements and
re-fetches rather than carrying chunks that a newer body would make stale; and naming one instance
twice is a redefinition rather than a union, so additivity holds across instance names and never
within one.

Records why the derived unnamed view lost after being built and measured - it synthesised a
requirement nobody wrote into `getReferenceEntityFetch()`, a map with ten readers, four of which
changed behaviour - and why the per-name offset table, the per-name record split and the blanket skip
were rejected, each with the concrete blocker rather than a preference. Cross-links the name-axis
record in both directions and regenerates the index.

Also records the JMH `--add-opens` trap in the benchmark README: without the flag the `decodeAndIndex`
arms fail every warmup iteration, JMH still exits 0 and omits them from the JSON, so a partial table
reads as a complete one.

The implementation merged in #1639 without this record; it lands here rather than being back-dated.

Ref: #1637